--- a/JanKenPo/app/src/main/res/values/strings.xml
+++ b/JanKenPo/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">JanKenPo</string>
+    <string name="user_wins">Você escolheu %s e ganhou!!!</string>
+    <string name="user_loses">Você escolheu %s e  perdeu...</string>
+    <string name="draw">Vocês escolheram %s e empataram</string>
 </resources>
